--- a/static/static-files/css/rtl.css
+++ b/static/static-files/css/rtl.css
@@ -1,4 +1,19 @@
+@font-face {
+    font-family: Sahel;
+    src: url('Sahel.eot');
+    src: url('Sahel.eot?#iefix') format('embedded-opentype'),
+         url('Sahel.woff2') format('woff2'),
+         url('Sahel.woff') format('woff'),
+         url('Sahel.ttf') format('truetype');
+  }
+
 body{
     direction:rtl;
     text-align: right;
+    font-family: "Sahel";
+}
+
+.navbar-nav.ml-auto {
+    margin-left: inherit !important;
+    margin-right: auto;
 }
