--- a/templates/tem-project/base.html
+++ b/templates/tem-project/base.html
@@ -1,5 +1,5 @@
 {% load static %}
-
+{% load base_tags %}
 <!DOCTYPE html>
 <html lang="en">
 
@@ -31,62 +31,29 @@
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
         <div class="container">
-            <a class="navbar-brand" href="index.html">وبلاگ جنگویی</a>
+            <a class="navbar-brand" href="{% url 'article:home' %}">{% title %}</a>
             <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse"
                 data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false"
                 aria-label="Toggle navigation">
                 Menu
                 <i class="fas fa-bars"></i>
             </button>
-            <div class="collapse navbar-collapse" id="navbarResponsive">
-                <ul class="navbar-nav ml-auto">
-                    <li class="nav-item">
-                        <a class="nav-link" href="index.html">Home</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="about.html">About</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="post.html">Sample Post</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="contact.html">Contact</a>
-                    </li>
-                </ul>
-            </div>
+            {% category_navbar %}
+            </ul>
+        </div>
         </div>
     </nav>
 
     <!-- Page Header -->
-    <header class="masthead" style="background-image: url('{% static "static-files/img/home-bg.jpg" %}')">
-        <div class="overlay"></div>
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-8 col-md-10 mx-auto">
-                    <div class="site-heading">
-                        <h1>Django</h1>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </header>
+
 
     <!-- Main Content -->
-    <div class="container">
-        <div class="row">
-            <div class="col-lg-8 col-md-10 mx-auto">
-                {% block main %}
 
-                {% endblock %}
-                <!-- Pager -->
-                <div class="clearfix">
-                    <a class="btn btn-primary float-right" href="#">Older Posts &rarr;</a>
-                </div>
-            </div>
-        </div>
-    </div>
+    {% block main %}
 
-    <hr>
+    {% endblock %}
+
+    
 
     <!-- Footer -->
     <footer>
@@ -119,7 +86,7 @@
                             </a>
                         </li>
                     </ul>
-                    <p class="copyright text-muted">Copyright &copy; Your Website 2020</p>
+
                 </div>
             </div>
         </div>
