--- a/templates/tem-project/category.html
+++ b/templates/tem-project/category.html
@@ -18,7 +18,8 @@
 <div class="container">
     <div class="row">
         <div class="col-lg-8 col-md-10 mx-auto">
-            {% for art in article %}
+            <h3 class="alert alert-primary text-center">دسته بندی: {{category.title}}</h3>
+            {% for art in object_list %}
             <div class="post-preview">
                 <a href="{% url 'article:detail' art.slug %}">
                     <h2 class="post-title">
@@ -31,9 +32,11 @@
                 <p class="post-meta">نوشته شده توسط
                     <a href="#">رضا</a>
                     {{art.jpublish}}</p>
-                {% for cat in art.category.active %}
-                <a href="#">#{{cat.title}}</a>
-                {% endfor %}
+                <div class="category">
+                    {% for cat in art.category.active %}
+                    <a href="#">#{{cat.title}}</a>
+                    {% endfor %}
+                </div>
             </div>
             <hr>
 
@@ -42,12 +45,14 @@
             <!-- Pager -->
 
             <div class="clearfix">
-                {% if article.has_next %}
-                <a class="btn btn-primary float-left mr-4" href="{% url 'article:category' category.slug article.next_page_number %}">صفحه
+                {% if page_obj.has_next %}
+                <a class="btn btn-primary float-left mr-4"
+                    href="{% url 'article:category' category.slug page_obj.next_page_number %}">صفحه
                     بعدی &larr;</a>
                 {% endif %}
-                {% if article.has_previous %}
-                <a class="btn btn-primary float-right" href="{% url 'article:category' category.slug article.previous_page_number %}">
+                {% if page_obj.has_previous %}
+                <a class="btn btn-primary float-right"
+                    href="{% url 'article:category' category.slug page_obj.previous_page_number %}">
                     &rarr; صفحه قبلی </a>
                 {% endif %}
             </div>
