--- a/templates/tem-project/detail.html
+++ b/templates/tem-project/detail.html
@@ -2,7 +2,7 @@
 {% load static %}
 
 {% block main %}
-<header class="masthead" style="background-image: url('{{articles.thumbnail.url}}')">
+<header class="masthead" style="background-image: url('{{object.thumbnail.url}}')">
   <div class="overlay"></div>
   <div class="container">
     <div class="row">
@@ -19,14 +19,14 @@
     <div class="col-lg-8 col-md-10 mx-auto">
       <div class="post-preview">
         <h2 class="post-title">
-          {{articles.title}}
+          {{object.title}}
         </h2>
         <h3 class="post-subtitle">
-          {{articles.description|linebreaks}}
+          {{object.description|linebreaks}}
         </h3>
         <p class="post-meta">نوشته شده توسط
           <a href="#">رضا</a>
-          {{articles.jpublish}}</p>
+          {{object.jpublish}}</p>
       </div>
       <hr>
       {% endblock %}
