--- a/templates/tem-project/partials/category-navbar.html
+++ b/templates/tem-project/partials/category-navbar.html
@@ -4,7 +4,14 @@
             <a class="nav-link" href="{% url 'article:home' %}">خانه</a>
         </li>
         {% for cat in category %}
+        {% if cat.parent == None %}
         <li class="nav-item">
             <a class="nav-link" href="{% url 'article:category' cat.slug %}">{{cat.title}}</a>
+            {% if cat.children.all %}
+            {% include 'tem-project/partials/category-navbar-loop.html' %}
+            {% endif %}
         </li>
+        {% endif %}
         {% endfor %}
+    </ul>
+</div>
