--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -1,48 +1,67 @@
 {% load static %}
+{% load widget_tweaks %}
 
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
 	<title>Login</title>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-<!--===============================================================================================-->	
-	<link rel="icon" type="image/png" href="{% static 'login/images/icons/favicon.ico' %}"/>
-<!--========================================================c=======================================-->
+	<!--===============================================================================================-->
+	<link rel="icon" type="image/png" href="{% static 'login/images/icons/favicon.ico' %}" />
+	<!--========================================================c=======================================-->
 	<link rel="stylesheet" type="text/css" href="{% static 'login/vendor/bootstrap/css/bootstrap.min.css' %}">
-<!--===============================================================================================-->
-	<link rel="stylesheet" type="text/css" href="{% static 'login/fonts/font-awesome-4.7.0/css/font-awesome.min.css' %}">
-<!--===============================================================================================-->
-	<link rel="stylesheet" type="text/css" href="{% static 'login/fonts/iconic/css/material-design-iconic-font.min.css' %}">
-<!--===============================================================================================-->
+	<!--===============================================================================================-->
+	<link rel="stylesheet" type="text/css"
+		href="{% static 'login/fonts/font-awesome-4.7.0/css/font-awesome.min.css' %}">
+	<!--===============================================================================================-->
+	<link rel="stylesheet" type="text/css"
+		href="{% static 'login/fonts/iconic/css/material-design-iconic-font.min.css' %}">
+	<!--===============================================================================================-->
 	<link rel="stylesheet" type="text/css" href="{% static 'login/vendor/animate/animate.css' %}">
-<!--===============================================================================================-->	
+	<!--===============================================================================================-->
 	<link rel="stylesheet" type="text/css" href="{% static 'login/vendor/css-hamburgers/hamburgers.min.css' %}">
-<!--===============================================================================================-->
+	<!--===============================================================================================-->
 	<link rel="stylesheet" type="text/css" href="{% static 'login/vendor/animsition/css/animsition.min.css' %}">
-<!--===============================================================================================-->
+	<!--===============================================================================================-->
 	<link rel="stylesheet" type="text/css" href="{% static 'login/vendor/select2/select2.min.css' %}">
-<!--===============================================================================================-->	
+	<!--===============================================================================================-->
 	<link rel="stylesheet" type="text/css" href="{% static 'login/vendor/daterangepicker/daterangepicker.css' %}">
-<!--===============================================================================================-->
+	<!--===============================================================================================-->
 	<link rel="stylesheet" type="text/css" href="{% static 'login/css/util.css' %}">
 	<link rel="stylesheet" type="text/css" href="{% static 'login/css/main.css' %}">
 	<link rel="stylesheet" type="text/css" href="{% static 'login/css/rtl.css' %}">
-<!--===============================================================================================-->
+	<!--===============================================================================================-->
 </head>
+
 <body>
-	
+
 	<div class="limiter">
+		{% if form.non_field_errors %}
+		<div class="error">
+			{% for error in form.non_field_errors %}
+			<span>{{error}}</span>
+			{% endfor %}
+		</div>
+		{% endif %}
 		<div class="container-login100">
 			<div class="wrap-login100">
 				<form class="login100-form validate-form" method="POST"> {% csrf_token %}
 					<span class="login100-form-title p-b-26">
 						صفحه ورود
 					</span>
-					
 
-					<div class="wrap-input100 validate-input" data-validate = "Valid email is: a@b.c">
-						{{form.username}}
+
+					<div class="wrap-input100 validate-input" data-validate="Valid email is: a@b.c">
+						{{form.username|add_class:"input100"}}
+						{% if form.username.errors %}
+						<div class="error">
+							{% for error in form.username.errors %}
+							<span>{{error}}</span>
+							{% endfor %}
+						</div>
+						{% endif %}
 						<span class="focus-input100" data-placeholder="نام کاربری"></span>
 					</div>
 
@@ -50,7 +69,14 @@
 						<span class="btn-show-pass">
 							<i class="zmdi zmdi-eye"></i>
 						</span>
-						{{form.password}}
+						{{form.password|add_class:"input100"}}
+						{% if form.password.errors %}
+						<div class="error">
+							{% for error in form.password.errors %}
+							<span>{{error}}</span>
+							{% endfor %}
+						</div>
+						{% endif %}
 						<span class="focus-input100" data-placeholder="گذرواژه"></span>
 					</div>
 
@@ -66,26 +92,27 @@
 			</div>
 		</div>
 	</div>
-	
+
 
 	<div id="dropDownSelect1"></div>
-	
-<!--===============================================================================================-->
+
+	<!--===============================================================================================-->
 	<script src="{% static 'login/vendor/jquery/jquery-3.2.1.min.js' %}"></script>
-<!--===============================================================================================-->
+	<!--===============================================================================================-->
 	<script src="{% static 'login/vendor/animsition/js/animsition.min.js' %}"></script>
-<!--===============================================================================================-->
+	<!--===============================================================================================-->
 	<script src="{% static 'login/vendor/bootstrap/js/popper.js' %}"></script>
 	<script src="{% static 'login/vendor/bootstrap/js/bootstrap.min.js' %}"></script>
-<!--===============================================================================================-->
+	<!--===============================================================================================-->
 	<script src="{% static 'login/vendor/select2/select2.min.js' %}"></script>
-<!--===============================================================================================-->
+	<!--===============================================================================================-->
 	<script src="{% static 'login/vendor/daterangepicker/moment.min.js' %}"></script>
 	<script src="{% static 'login/vendor/daterangepicker/daterangepicker.js' %}"></script>
-<!--===============================================================================================-->
+	<!--===============================================================================================-->
 	<script src="{% static 'login/vendor/countdowntime/countdowntime.js' %}"></script>
-<!--===============================================================================================-->
+	<!--===============================================================================================-->
 	<script src="{% static 'login/js/main.js' %}"></script>
 
 </body>
+
 </html>
